--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,8 @@ matplotlib == 3.10.0
 # numba != 0.55; python_version < "3.10"
 # numba >= 0.55.1; python_version >= "3.10"
 numba == 0.61.0
-numbalsoda == 0.3.4
+# NumbaLSODA does not work yet on the GitHub Actions Windows runners
+numbalsoda == 0.3.4; sys_platform != "win32"
 # If you're using an old version of Numba and get the error:
 # "create_target_machine() got an unexpected keyword argument 'jitdebug'"
 # then you may have to downgrade llvmlite to 0.32.1
