--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,8 @@ build:
   os: ubuntu-lts-latest
   tools:
     python: "3.13"
+  apt_packages:
+    - gfortran
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
