--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,6 +11,8 @@ build:
     python: "3.13"
   apt_packages:
     - gfortran
+    - libtbb12
+    - optipng
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -24,4 +26,5 @@ formats: all
 python:
   install:
     - requirements: requirements.txt
+    - requirements: requirements-dev.txt
     - requirements: docs/requirements.txt
