--- a/.github/workflows/deploy-shf.yml
+++ b/.github/workflows/deploy-shf.yml
@@ -1,7 +1,7 @@
 name: Publish to Software Heritage Foundation
 on:
   release:
-    types: [published, created, edited]
+    types: [published]
   workflow_dispatch:
 jobs:
   deploy-shf:
