--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,5 +15,6 @@ pytest-cov == 6.0.0
 pytest-html == 4.1.1
 pytest-xdist == 3.6.1
 setuptools == 75.8.0
+twine == 6.1.0
 wheel == 0.45.1
 yappi == 1.6.10
