--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -3,6 +3,8 @@ on:
   release:
     types: [published]
   workflow_dispatch:
+env:
+  PYTHON_VERSION: '3.13'
 jobs:
   deploy-pypi:
     runs-on: ubuntu-latest
@@ -16,6 +18,8 @@ jobs:
     steps:
       - name: Setup Python
         uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Print Python version
         run: python -V
       - name: Checkout
