--- a/.clocignore
+++ b/.clocignore
@@ -7,6 +7,8 @@ docs/auto_examples
 docs/gen_examples
 docs/modules/gen_modules
 docs/modules/tests/gen_modules
+examples/fig
+examples/test-results
 htmlcov
 logs
 pylint.txt
@@ -14,5 +16,7 @@ test-results
 tests/bubble/coverage.xml
 tests/bubble/htmlcov
 tests/bubble/test-results
+tests/models/htmlcov
+tests/models/test-results
 tests/test_data
 venv
