--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install LaTeX
         run: |
           sudo apt-get update
-          sudo apt-get install -y cm-super dvipng latexmk optipng texlive-latex-extra texlive-xetex fonts-freefont-otf xindy
+          sudo apt-get install -y cm-super dvipng fontconfig latexmk optipng texlive-latex-extra texlive-xetex fonts-freefont-otf xindy
       - name: Checkout
         uses: actions/checkout@v4
       - name: Load pip cache
